Update client citations in testimonials section

--- a/index.html
+++ b/index.html
@@ -148,15 +148,15 @@ Contact us to ask about our <strong>"Stock & Order"</strong> service          </
         <div class="quotes">
           <blockquote>
             <p>“Marshall Supplies have made our site management effortless. Deliveries arrive on time every week.”</p>
-            <cite>— Facilities Manager, Oxford Business Park</cite>
+            <cite>— Facilities Manager, An Oxford College</cite>
           </blockquote>
           <blockquote>
             <p>“We’ve used Marshall for years. The quality is reliable and the service is friendly and personal.”</p>
-            <cite>— Catering Director, Northshore Hospitality</cite>
+            <cite>— Catering Director, An Oxfordshire Hotel</cite>
           </blockquote>
           <blockquote>
             <p>“They know exactly what we need before we even run out. Couldn’t recommend them enough.”</p>
-            <cite>— Cleaning Supervisor, PrimeCare Medical</cite>
+            <cite>— Cleaning Supervisor, Nursing Home, Banbury</cite>
           </blockquote>
         </div>
       </div>
