--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
   <!doctype html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-LGY7MC7S7M"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-LGY7MC7S7M'); </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Marshall Supplies — Simplifying essential supplies since 1995</title>
